[package]
name = "grease-workspace"
version = "0.1.1"
authors = [
	"Jonathan Pallant <jonathan.pallant@cambridgeconsultants.com>",
	"David Wood <david.wood@cambridgeconsultants.com>",
]
readme = "README.md"
license-file = "COPYRIGHT"
build = "build.rs"

[workspace]
members = [
	"grease",
	"grease-socket",
	"grease-http",
]

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13"
