[package]
name = "grease-http"
version = "0.1.0"
authors = ["Jonathan Pallant <jonathan.pallant@cambridgeconsultants.com>"]
license-file = "../COPYRIGHT"

[dependencies]
grease = { path = "../grease" }
grease-socket = { path = "../grease-socket" }
log = "0.4.1"
rushttp = { git = "https://github.com/thejpster/rushttp" }
multi-map = "*"

[dev-dependencies]
env_logger = "0.5.6"
