[package]
name = "grease-socket"
version = "0.2.1"
authors = [
	"Jonathan Pallant <jonathan.pallant@cambridgeconsultants.com>",
	"David Wood <david.wood@cambridgeconsultants.com>",
]
license-file = "../COPYRIGHT"

[dependencies]
mio = "0.6"
mio-more = "0.1.0"
grease = { path = "../grease" }
log = "0.4.1"
rand = "0.4.2"

[dev-dependencies]
env_logger = "0.5.6"
