[package]
name = "grease"
version = "0.5.2"
authors = [
	"Jonathan Pallant <jonathan.pallant@cambridgeconsultants.com>",
	"David Wood <david.wood@cambridgeconsultants.com>",
]
license-file = "../COPYRIGHT"
build = "build.rs"

[dependencies]

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13"
